chore: update MahApps.Metro to v3.0.0-alpha0492

--- a/src/IconPacks.Browser/MainWindow.xaml
+++ b/src/IconPacks.Browser/MainWindow.xaml
@@ -19,7 +19,7 @@
                  d:DesignWidth="600"
                  mah:DialogParticipation.Register="{Binding}"
                  BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
-                 BorderThickness="1"
+                 GlowColor="{DynamicResource MahApps.Colors.Accent}"
                  ResizeMode="CanResizeWithGrip"
                  TitleCharacterCasing="Normal"
                  WindowStartupLocation="CenterScreen"
