--- a/src/IconPacks.Browser/Styles/SearchTextBox.xaml
+++ b/src/IconPacks.Browser/Styles/SearchTextBox.xaml
@@ -55,6 +55,7 @@
                                                       Kind="Magnify" />
 
                             <ScrollViewer x:Name="PART_ContentHost"
+                                          Style="{DynamicResource MahApps.Styles.ScrollViewer.TextControlContentHost}"
                                           Grid.Row="1"
                                           Grid.Column="1"
                                           Margin="0"
@@ -63,10 +64,10 @@
                                           Background="{x:Null}"
                                           BorderThickness="0"
                                           IsTabStop="False"
-                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                          Style="{DynamicResource MahApps.Styles.ScrollViewer.TextControlContentHost}" />
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
 
                             <TextBlock x:Name="PART_Message"
+                                       Style="{DynamicResource MahApps.Styles.TextBlock.Watermark}"
                                        Grid.Row="1"
                                        Grid.Column="1"
                                        Margin="4 0"
@@ -74,7 +75,6 @@
                                        HorizontalAlignment="Stretch"
                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                        Foreground="{TemplateBinding Foreground}"
-                                       Style="{DynamicResource MahApps.Styles.TextBlock.Watermark}"
                                        Text="{TemplateBinding mah:TextBoxHelper.Watermark}"
                                        TextAlignment="{TemplateBinding mah:TextBoxHelper.WatermarkAlignment}"
                                        TextTrimming="{TemplateBinding mah:TextBoxHelper.WatermarkTrimming}"
@@ -82,10 +82,10 @@
                                        Visibility="Collapsed" />
 
                             <ContentControl x:Name="PART_FloatingMessageContainer"
+                                            Style="{DynamicResource MahApps.Styles.ContentControl.FloatingMessageContainer}"
                                             Grid.Row="0"
                                             Grid.Column="1"
-                                            Margin="4 0"
-                                            Style="{DynamicResource MahApps.Styles.ContentControl.FloatingMessageContainer}">
+                                            Margin="4 0">
                                 <ContentControl.Height>
                                     <MultiBinding Converter="{converters:MathMultiplyConverter}" FallbackValue="0">
                                         <Binding ElementName="PART_FloatingMessage"
@@ -97,18 +97,17 @@
                                     </MultiBinding>
                                 </ContentControl.Height>
                                 <TextBlock x:Name="PART_FloatingMessage"
+                                           Style="{DynamicResource MahApps.Styles.TextBlock.AutoCollapsing}"
                                            HorizontalAlignment="Stretch"
                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                            Foreground="{TemplateBinding Foreground}"
-                                           Style="{DynamicResource MahApps.Styles.TextBlock.AutoCollapsing}"
                                            Text="{TemplateBinding mah:TextBoxHelper.Watermark}"
                                            TextAlignment="{TemplateBinding mah:TextBoxHelper.WatermarkAlignment}"
                                            TextTrimming="{TemplateBinding mah:TextBoxHelper.WatermarkTrimming}">
                                     <TextBlock.RenderTransform>
                                         <TranslateTransform x:Name="FloatingMessageTransform">
                                             <TranslateTransform.Y>
-                                                <MultiBinding Converter="{converters:MathSubtractConverter}"
-                                                              FallbackValue="0">
+                                                <MultiBinding Converter="{converters:MathSubtractConverter}" FallbackValue="0">
                                                     <Binding ElementName="PART_FloatingMessage"
                                                              Mode="OneWay"
                                                              Path="ActualHeight" />
@@ -123,21 +122,21 @@
                             </ContentControl>
 
                             <Button x:Name="PART_ClearText"
+                                    Style="{DynamicResource MahApps.Styles.Button.Chromeless}"
                                     Grid.Row="0"
                                     Grid.RowSpan="2"
                                     Grid.Column="2"
                                     Width="{TemplateBinding mah:TextBoxHelper.ButtonWidth}"
+                                    FontFamily="{TemplateBinding mah:TextBoxHelper.ButtonFontFamily}"
+                                    FontSize="{TemplateBinding mah:TextBoxHelper.ButtonFontSize}"
+                                    mah:ControlsHelper.CornerRadius="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(mah:ControlsHelper.CornerRadius), Mode=OneWay, Converter={StaticResource CornerRadiusBindingConverter}, ConverterParameter={x:Static converters:RadiusType.Left}}"
                                     Command="{TemplateBinding mah:TextBoxHelper.ButtonCommand}"
                                     CommandParameter="{TemplateBinding mah:TextBoxHelper.ButtonCommandParameter}"
                                     CommandTarget="{TemplateBinding mah:TextBoxHelper.ButtonCommandTarget}"
                                     Content="{TemplateBinding mah:TextBoxHelper.ButtonContent}"
                                     ContentTemplate="{TemplateBinding mah:TextBoxHelper.ButtonContentTemplate}"
                                     Focusable="False"
-                                    FontFamily="{TemplateBinding mah:TextBoxHelper.ButtonFontFamily}"
-                                    FontSize="{TemplateBinding mah:TextBoxHelper.ButtonFontSize}"
-                                    mah:ControlsHelper.CornerRadius="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(mah:ControlsHelper.CornerRadius), Mode=OneWay, Converter={StaticResource CornerRadiusBindingConverter}, ConverterParameter={x:Static converters:RadiusType.Left}}"
                                     IsTabStop="False"
-                                    Style="{DynamicResource MahApps.Styles.Button.Chromeless}"
                                     Template="{TemplateBinding mah:TextBoxHelper.ButtonTemplate}"
                                     Visibility="Visible" />
                         </Grid>
@@ -148,9 +147,9 @@
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 CornerRadius="{TemplateBinding mah:ControlsHelper.CornerRadius}"
                                 IsHitTestVisible="False"
-                                Opacity="0"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(mah:ControlsHelper.DisabledVisualElementVisibility), Mode=OneWay}" />
+                                Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(mah:ControlsHelper.DisabledVisualElementVisibility), Mode=OneWay}"
+                                Opacity="0" />
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="mah:TextBoxHelper.ClearTextButton" Value="True">
@@ -174,8 +173,8 @@
                         </DataTrigger>
 
                         <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Text}" Value="">
-                            <Setter TargetName="PART_Message" Property="Visibility" Value="Visible" />
                             <Setter TargetName="PART_ClearText" Property="Visibility" Value="Collapsed" />
+                            <Setter TargetName="PART_Message" Property="Visibility" Value="Visible" />
                         </DataTrigger>
 
                         <MultiDataTrigger>
@@ -245,7 +244,6 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="mah:ControlsHelper.CornerRadius" Value="{Binding RelativeSource={RelativeSource Mode=Self}, Path=ActualHeight, Converter={converters:SizeToCornerRadiusConverter}}" />
-        <Setter Property="mah:TextBoxHelper.ButtonWidth" Value="30" />
         <Setter Property="mah:TextBoxHelper.ButtonContentTemplate">
             <Setter.Value>
                 <DataTemplate>
@@ -259,8 +257,7 @@
         <Setter Property="mah:TextBoxHelper.ButtonTemplate">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}"
-                            CornerRadius="{TemplateBinding mah:ControlsHelper.CornerRadius}">
+                    <Border Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding mah:ControlsHelper.CornerRadius}">
                         <ContentPresenter Name="PART_ContentPresenter"
                                           Margin="{TemplateBinding Padding}"
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
@@ -282,6 +279,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="mah:TextBoxHelper.ButtonWidth" Value="30" />
         <Setter Property="mah:TextBoxHelper.ClearTextButton" Value="True" />
         <Setter Property="mah:TextBoxHelper.Watermark" Value="Filter by..." />
         <Style.Triggers>
@@ -293,5 +291,5 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    
+
 </ResourceDictionary>
