--- a/src/IconPacks.Browser/MainWindow.xaml
+++ b/src/IconPacks.Browser/MainWindow.xaml
@@ -1,7 +1,8 @@
-<mah:MetroWindow x:Class="IconPacks.Browser.MainWindow"
+﻿<mah:MetroWindow x:Class="IconPacks.Browser.MainWindow"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:controls="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel"
+                 xmlns:controlzex="urn:controlzex"
                  xmlns:converter="http://metro.mahapps.com/winfx/xaml/shared"
                  xmlns:ctrls="clr-namespace:IconPacks.Browser.Controls"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,12 +15,11 @@
                  Height="800"
                  MinWidth="600"
                  MinHeight="400"
+                 controlzex:WindowBackdropManager.BackdropType="None"
                  d:DataContext="{d:DesignInstance viewModels:MainViewModel}"
                  d:DesignHeight="400"
                  d:DesignWidth="600"
                  mah:DialogParticipation.Register="{Binding}"
-                 BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
-                 GlowColor="{DynamicResource MahApps.Colors.Accent}"
                  ResizeMode="CanResizeWithGrip"
                  TitleCharacterCasing="Normal"
                  WindowStartupLocation="CenterScreen"
@@ -296,9 +296,9 @@
                             <controls:VirtualizingWrapPanel IsItemsHost="True"
                                                             ItemSize="128,128"
                                                             MouseWheelDelta="1"
+                                                            MouseWheelDeltaItem="1"
                                                             Orientation="Horizontal"
                                                             ScrollLineDelta="1"
-                                                            MouseWheelDeltaItem="1"
                                                             SpacingMode="BetweenItemsOnly"
                                                             StretchItems="False" />
                         </ItemsPanelTemplate>
